--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification:               # fill in to your verification string
+google_site_verification:  google-site-verification=UHJaSbxKKqVmj_J1IdJGLIGUCqNcq1YoxSsc0Phqe3g             # fill in to your verification string
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
